# UltimateGoalCV

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: main.cpp  main.h  phoneCam.cpp  phoneCam.h
src/python/: Combined.py
src/python/HSV/: ColorTuningHSV.py
src/python/YCrCb/: ColorTuningYCrCb.py
src/ringLocalization/assets/: IMG_4111.HEIC  IMG_4112.HEIC  IMG_4113.HEIC  IMG_4114.HEIC  IMG_4116.HEIC  IMG_4117.HEIC
src/ringLocalization/python/: Autotune.py  NonObj.py
src/ringStack/cpp/: phoneCam.cpp  singleImage.cpp  singleImage.h
src/ringStack/python/: contours.py
src/ringStack/python/HSV/: RingStackHSV.py
src/ringStack/python/YCrCb/: ColorTuningYCrCb.py  RingStackYCrCb.py
